# funny-cubes

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
assets/shaders/: test.frag  test.vert
include/: stb_image.h  utilities.h
include/glad/: glad.h
src/: glad.c  main.cpp  ogl_utils.h  ogl_utils.hpp  stb_image.h
src/shaders/: test_shader.frag  test_shader.vert
